# galib_neuralnet

./: CMakeLists.txt  Makefile  README.md  README.txt  cuda_test.py  evol_neuralnet.py  evol_neuralnet_argparse.py  main.cpp  main_argparse.cpp  requirements.txt
